# video2chars

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  video2chars-html.py  video2chars-shell.py  video2chars.py  video2html.py
colorful/: video2html.py
doc/: README-zh-cn.md
output/: play_chars.js
shell/: video2chars.py
src/: commands.py  ffmpeg.py  video2chars.py  video2html.py
tests/: test_convert.py
video2chars/: __init__.py  __main__.py  converter.py  ffmpeg.py
